# robfun_team_gold

./: README.md  copy.sh
gold_fundamentals/: CMakeLists.txt  gold.txt  map.txt  package.xml  pickup.txt
gold_fundamentals/launch/: localization.launch  localization_rviz.launch  moving.launch  planning.launch  smooth.launch
gold_fundamentals/msg/: Goal.msg
gold_fundamentals/rviz/: rviz.rviz
gold_fundamentals/src/: GridPerceptor.cpp  GridPerceptor.h  PID.cpp  PID.h  Robot.cpp  Robot.h  align_robot.cpp  challenge.cpp  drive_with_encoders.cpp  keyboard_publisher.cpp  localization.cpp  localization_discrete.cpp  localize_robot.cpp  perfect_turn_no_sensor.cpp  perfect_turn_with_encoders.cpp  plan_executer.cpp  planning.cpp  publish_gold.py  publish_map.py  publish_pickup.py  smooth_executer.cpp  square_no_sensors.cpp  square_with_encoders.cpp  tools.cpp  tools.h  wanderer.cpp
gold_fundamentals/src/examples/: example_turning.cpp
gold_fundamentals/src/utils/: DiscreteLocalizer.cpp  DiscreteLocalizer.h  GridPerceptor.cpp  GridPerceptor.h  Maze.cpp  Maze.h  OccupancyGrid.cpp  OccupancyGrid.h  PID.cpp  PID.h  ParticleFilter.cpp  ParticleFilter.h  PathPlanner.cpp  PathPlanner.h  Probability.cpp  Probability.h  Robot.cpp  Robot.h  geometry.cpp  geometry.h  probability.cpp  probability.h  tools.cpp  tools.h
gold_fundamentals/srv/: UpdateMap.srv
src/assignment1/: square_no_sensors.cpp  square_with_encoders.cpp  wanderer.cpp
